fixed align self flex end

--- a/My_Grid_Flex_Notes/stylesheet.css
+++ b/My_Grid_Flex_Notes/stylesheet.css
@@ -225,6 +225,10 @@
 
 .childas-start {
    align-self: flex-start;	
+} 
+
+.childas-end {
+   align-self: flex-end;	
 }
 /* end of align-self */
  
